# plex_auditor

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: auto-merge.yml  ci.yml  release.yml
docker/: Dockerfile  entrypoint.sh
docs/superpowers/plans/: 2026-04-12-plan-1-foundation-and-mvp-scan.md  2026-04-12-plan-2-check-catalog.md  2026-04-13-plan-3-reporters-and-cli-polish.md  2026-04-13-plan-4-distribution-and-release.md
docs/superpowers/specs/: 2026-04-12-plex-library-auditor-design.md
tools/: bump_version.py  update_changelog.py
